# termilog_ws

./: .gitignore  README.md  env.sh  index-v4.yaml  requirements.txt  todo.md
.devcontainer/: Dockerfile  arm_compose.yaml  devcontainer.json
rosdep/: project_rosdep.yaml
src/: ros-humble-terminlog_0.0.1-0jammy_amd64.deb
src/terminlog/: CMakeLists.txt  README.md  package.xml
src/terminlog/cmake/: Packing.cmake
src/terminlog/config/: params.yaml
src/terminlog/debian/control/: postinst
src/terminlog/launch/: terminlog.launch.py  test.launch.py
src/terminlog/my_debian/: clean.sh  patch_compat.sh  patch_rule.sh
src/terminlog/scripts/: check_box.py  fuzzy_demo.py  input_model.py  select_model.py  style.css  x.py
src/terminlog/terminlog/: __init__.py  input_modal.py  test_node.py  tui_style.tcss  view_tui.py  viewer.py
tests/: test_logging.py
